--- a/combos.html
+++ b/combos.html
@@ -15,8 +15,9 @@
                 <img src="imagenes/logo_burgershot.png" alt="Burger Shot" class="logo">
             </div>
             <div class="nav-links">
-                <a href="/BurgerShot/" class="nav-link"><i class="fas fa-cocktail"></i>Inicio</a>
+                <a href="/BurgerShot/" class="nav-link"><i class="fas fa-house"></i>Inicio</a>
                 <a href="bebidas.html" class="nav-link"><i class="fas fa-cocktail"></i>Bebidas</a>
+                <a href="extras.html" class="nav-link"><i class="fas fa-plus"></i>Extras</a>
                 <a href="https://forms.gle/2hqaSMFD3Gk89B6AA" class="nav-link cta-button">Postular</a>
             </div>
         </nav>
@@ -58,7 +59,7 @@
                 <img src="imagenes/burgershot_Menu.png" alt="Combo Tsunami de sabores">
                 <h3>Combo Tsunami de sabores</h3>
                 <p>x4 Hot Dogs + x4 Nashots + x2 Cervezas o Bebidas energeticas.</p>
-                <span class="price">$825</span>
+                <span class="price">$700</span>
             </div>
             
         </div>
