--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="nav-links">
                 <a href="combos.html" class="nav-link"><i class="fas fa-burger"></i>Combos</a>
                 <a href="bebidas.html" class="nav-link"><i class="fas fa-cocktail"></i>Bebidas</a>
+                <a href="extras.html" class="nav-link"><i class="fas fa-plus"></i>Extras</a>
                 <a href="https://forms.gle/2hqaSMFD3Gk89B6AA" class="nav-link cta-button">Postular</a>
             </div>
         </nav>
