Añadido formulario en la web

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Burger Shot</title>
+    <title>Menú - Burger Shot</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -18,7 +18,7 @@
                 <a href="combos.html" class="nav-link"><i class="fas fa-burger"></i>Combos</a>
                 <a href="bebidas.html" class="nav-link"><i class="fas fa-cocktail"></i>Bebidas</a>
                 <a href="extras.html" class="nav-link"><i class="fas fa-plus"></i>Extras</a>
-                <a href="https://forms.gle/2hqaSMFD3Gk89B6AA" class="nav-link cta-button">Postular</a>
+                <a href="formulario.html" class="cta-button"><i class="fas fa-envelope"></i>Postular</a>
             </div>
         </nav>
     </header>
