--- a/bebidas.html
+++ b/bebidas.html
@@ -16,9 +16,9 @@
             </div>
             <div class="nav-links">
                 <a href="combos.html" class="nav-link"><i class="fas fa-burger"></i>Combos</a>
-                <a href="/BurgerShot/" class="nav-link"><i class="fas fa-house"></i>Inicio</a>
+                <a href="index.html" class="nav-link"><i class="fas fa-house"></i>Inicio</a>
                 <a href="extras.html" class="nav-link"><i class="fas fa-plus"></i>Extras</a>
-                <a href="https://forms.gle/2hqaSMFD3Gk89B6AA" class="nav-link cta-button">Postular</a>
+                <a href="formulario.html" class="cta-button"><i class="fas fa-envelope"></i>Postular</a>
             </div>
         </nav>
     </header>
