--- a/combos.html
+++ b/combos.html
@@ -15,10 +15,10 @@
                 <img src="imagenes/logo_burgershot.png" alt="Burger Shot" class="logo">
             </div>
             <div class="nav-links">
-                <a href="/BurgerShot/" class="nav-link"><i class="fas fa-house"></i>Inicio</a>
+                <a href="index.html" class="nav-link"><i class="fas fa-house"></i>Inicio</a>
                 <a href="bebidas.html" class="nav-link"><i class="fas fa-cocktail"></i>Bebidas</a>
                 <a href="extras.html" class="nav-link"><i class="fas fa-plus"></i>Extras</a>
-                <a href="https://forms.gle/2hqaSMFD3Gk89B6AA" class="nav-link cta-button">Postular</a>
+                <a href="formulario.html" class="cta-button"><i class="fas fa-envelope"></i>Postular</a>
             </div>
         </nav>
     </header>
