--- a/extras.html
+++ b/extras.html
@@ -15,9 +15,9 @@
                 <img src="imagenes/logo_burgershot.png" alt="Burger Shot" class="logo">
             </div>
             <div class="nav-links">
-                <a href="combos.html" class="nav-link"><i class="fas fa-burger"></i>Combos</a>
+                <a href="combos.html" class="nav-link"><i class="fas fa-basket-shopping"></i>Combos</a>
                 <a href="bebidas.html" class="nav-link"><i class="fas fa-cocktail"></i>Bebidas</a>
-                <a href="index.html" class="nav-link"><i class="fas fa-house"></i>Inicio</a>
+                <a href="index.html" class="nav-link"><i class="fas fa-burger"></i>Hamburguesas</a>
                 <a href="formulario.html" class="cta-button"><i class="fas fa-envelope"></i>Postular</a>
             </div>
         </nav>
