--- a/formulario.html
+++ b/formulario.html
@@ -16,10 +16,10 @@
                 <img src="imagenes/logo_burgershot.png" alt="Burger Shot" class="logo">
             </div>
             <div class="nav-links">
-                <a href="combos.html" class="nav-link"><i class="fas fa-burger"></i>Combos</a>
+                <a href="combos.html" class="nav-link"><i class="fas fa-basket-shopping"></i>Combos</a>
                 <a href="bebidas.html" class="nav-link"><i class="fas fa-cocktail"></i>Bebidas</a>
                 <a href="extras.html" class="nav-link"><i class="fas fa-plus"></i>Extras</a>
-                <a href="index.html" class="nav-link"><i class="fas fa-home"></i>Inicio</a>
+                <a href="index.html" class="nav-link"><i class="fas fa-burger"></i>Hamburguesas</a>
             </div>
         </nav>
     </header>
