--- a/bebidas.html
+++ b/bebidas.html
@@ -16,7 +16,7 @@
             </div>
             <div class="nav-links">
                 <a href="combos.html" class="nav-link"><i class="fas fa-basket-shopping"></i>Combos</a>
-                <a href="index.html" class="nav-link"><i class="fas fa-burger"></i>Hamburguesas</a>
+                <a href="bebidas.html" class="nav-link"><i class="fas fa-burger"></i>Hamburguesas</a>
                 <a href="extras.html" class="nav-link"><i class="fas fa-plus"></i>Extras</a>
                 <a href="formulario.html" class="cta-button"><i class="fas fa-envelope"></i>Postular</a>
             </div>
