--- a/combos.html
+++ b/combos.html
@@ -15,7 +15,7 @@
                 <img src="imagenes/logo_burgershot.png" alt="Burger Shot" class="logo">
             </div>
             <div class="nav-links">
-                <a href="index.html" class="nav-link"><i class="fas fa-burger"></i>Hamburguesas</a>
+                <a href="bebidas.html" class="nav-link"><i class="fas fa-burger"></i>Hamburguesas</a>
                 <a href="bebidas.html" class="nav-link"><i class="fas fa-cocktail"></i>Bebidas</a>
                 <a href="extras.html" class="nav-link"><i class="fas fa-plus"></i>Extras</a>
                 <a href="formulario.html" class="cta-button"><i class="fas fa-envelope"></i>Postular</a>
