Fix HTML price span tag and adjust CSS layout dimensions

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <img src="imagenes/burgerShot_cheese3.png" alt="Cheeseburger3">
             <h3>Triple Cheeseburger</h3>
             <p>Deliciosa triple hamburguesa con queso</p>
-            <span class="price">$70/span>
+            <span class="price">$70</span>
         </div>
 
         <div class="menu-item">
