--- a/extras.html
+++ b/extras.html
@@ -35,10 +35,10 @@
         <div class="menu-grid">
 
             <div class="menu-item">
-                <img src="imagenes/donutsbox_SweetHoles.png" alt="Burger desayuno">
-                <h3>Burger desayuno</h3>
-                <p>x2 Donuts + x2 Cafés Shot.</p>
-                <span class="price">$150</span>
+                <img src="imagenes/shisha.png" alt="Shisha">
+                <h3>Cachimba</h3>
+                <p></p>
+                <span class="price">$100</span>
             </div>
             
         </div>
