--- a/bebidas.html
+++ b/bebidas.html
@@ -18,7 +18,7 @@
                 <a href="combos.html" class="nav-link"><i class="fas fa-basket-shopping"></i>Combos</a>
                 <a href="index.html" class="nav-link"><i class="fas fa-burger"></i>Hamburguesas</a>
                 <a href="extras.html" class="nav-link"><i class="fas fa-plus"></i>Extras</a>
-                <a href="formulario.html" class="cta-button"><i class="fas fa-envelope"></i>Postular</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfYzGYZ53M5Rf7Oz1gFqsr8RY472ng8ce4_BbZSmIrf3QY9mQ/viewform?usp=sharing" class="cta-button"><i class="fas fa-envelope"></i>Postular</a>
             </div>
         </nav>
     </header>
