--- a/extras.html
+++ b/extras.html
@@ -40,6 +40,20 @@
                 <p></p>
                 <span class="price">$100</span>
             </div>
+
+            <div class="menu-item">
+                <img src="imagenes/Generic_MenuKid.png" alt="caja">
+                <h3>Caja</h3>
+                <p></p>
+                <span class="price">$300</span>
+            </div>
+
+            <div class="menu-item">
+                <img src="imagenes/Generic_MenuKid.png" alt="caja">
+                <h3>Caja</h3>
+                <p>Con compras superiores a 700$</p>
+                <span class="price">$250</span>
+            </div>
             
         </div>
     </section>
