--- a/extras.html
+++ b/extras.html
@@ -44,7 +44,7 @@
             <div class="menu-item">
                 <img src="imagenes/Generic_MenuKid.png" alt="caja">
                 <h3>Caja</h3>
-                <p></p>
+                <p>A partir de la compra de 4 productos.</p>
                 <span class="price">$300</span>
             </div>
 
